; ModuleID = '/home/carl/AnghaBench/rufus/src/libcdio/iso9660/extr_iso9660.c_iso9660_set_ltime.c'
source_filename = "/home/carl/AnghaBench/rufus/src/libcdio/iso9660/extr_iso9660.c_iso9660_set_ltime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @iso9660_set_ltime(%struct.tm* %0, i32* %1) #0 {
  %3 = alloca %struct.tm*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.tm* %0, %struct.tm** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %5, align 4
  %6 = load %struct.tm*, %struct.tm** %3, align 8
  %7 = icmp ne %struct.tm* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = load %struct.tm*, %struct.tm** %3, align 8
  %10 = getelementptr inbounds %struct.tm, %struct.tm* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp sgt i64 %11, 0
  %13 = zext i1 %12 to i64
  %14 = select i1 %12, i32 -60, i32 0
  store i32 %14, i32* %5, align 4
  br label %15

15:                                               ; preds = %8, %2
  %16 = load %struct.tm*, %struct.tm** %3, align 8
  %17 = load i32, i32* %5, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @iso9660_set_ltime_with_timezone(%struct.tm* %16, i32 %17, i32* %18)
  ret void
}

declare dso_local i32 @iso9660_set_ltime_with_timezone(%struct.tm*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
